--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -51,7 +51,7 @@
         </article>
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved. Copyright</p>
+        <p>Copyright &copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
