--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -36,7 +36,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved. Copyright</p>
+        <p>Copyright &copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
