--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -62,7 +62,7 @@
         </table> 
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved. Copyright</p>
+        <p>Copyright &copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
