--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -65,7 +65,7 @@
     </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2024 TechCon. All rights reserved.</p>
+        <p>copyright &copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
