--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -20,13 +20,8 @@
      <main>
         <section>
         <h2>Welcome to TechCon 2024</h2>
-        <p>
-            Join us for the annual TechCon conference, a gathering of innovators, 
-            leaders, and technology enthusiasts exploring the future of tech. 
-            Expect inspiring talks, hands-on workshops, and networking opportunities 
-            with experts from around the world.
-        </p>
-        <!-- Embedded Video -->
+        <p>Join us for the annual TechCon conference, a gathering of innovators, leaders, and technology enthusiasts exploring the future of tech. Expect inspiring talks, hands-on workshops, and networking opportunities with experts from around the world.</p>
+       
         <video controls width="600">
             <source src="promo.mp4" type="video/mp4">
             <track src="promo_captions.vtt" kind="subtitles" srclang="en" label="English">
@@ -36,7 +31,7 @@
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2024 TechCon. All rights reserved.</p>
+        <p>copyright &copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
